Fix page height to use 100% instead of 100vh for better responsiveness and hided x overflow bc for some reason there was an offset out of the body

--- a/workspaces/front/src/js/pages/game/game.module.css
+++ b/workspaces/front/src/js/pages/game/game.module.css
@@ -5,9 +5,10 @@ body {
 .page {
     position: absolute;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     top: 0;
     left: 0;
+    overflow-x: hidden;
 }
 
 .playArea {
